--- a/src/styles/connection.css
+++ b/src/styles/connection.css
@@ -132,7 +132,7 @@ p.connection-line {
 
     margin-left: 6vw;
     margin-right: 6vw;
-    margin-top: 0.7vw;
+    margin-top: 1.7vh;
 
     position: relative;
 
